--- a/CG2.vcxproj.filters
+++ b/CG2.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClInclude Include="MyClass.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Myfunc.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
